plugins {
	id 'java-library'
	id 'eclipse'
	id 'idea'
//    id 'maven-publish'
	id 'net.neoforged.moddev' version '0.1.99'
}

tasks.named('wrapper', Wrapper).configure {
	// Define wrapper values here so as to not have to always do so when updating gradlew.properties.
	// Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
	// documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
	// file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
	// (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
	distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
	mavenLocal()
	maven { url "https://maven.blamejared.com" } //Patchouli, JEI
	maven {//CC Tweaked
		url "https://maven.squiddev.cc"
		content {
			includeGroup("cc.tweaked")
		}
	}
	maven {url "https://maven.theillusivec4.top/"} //Curios
	maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
	maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
	maven {
		url "https://cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	} // Essentials (release versions)
	maven { //Curios (forked after 1.20)
		name = "OctoStudios"
		url = uri("https://maven.octo-studios.com/releases")
	}
	flatDir { dirs 'libs' }//Essentials (dev versions); lets us grab dependencies from the libs folder
}

base {
	archivesName = mod_id
}

//Exclude python scripts from the build
sourceSets.main.resources.exclude('**/python/**')

// Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
	// Specify the version of NeoForge to use.
	version = project.neo_version

	parchment {
		mappingsVersion = project.parchment_mappings_version
		minecraftVersion = project.parchment_minecraft_version
	}

	// This line is optional. Access Transformers are automatically detected
	// accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

	// Default run configurations.
	// These can be tweaked, removed, or duplicated as needed.
	runs {

		configureEach {
			//Required for dependencies w/ mixins
			systemProperty 'mixin.env.remapRefMap', 'true'
			systemProperty 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
		}

		client {
			client()

			// Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		server {
			server()
			programArgument '--nogui'
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		// This run config launches GameTestServer and runs all registered gametests, then exits.
		// By default, the server will crash when no gametests are provided.
		// The gametest system is also enabled by default for other run configs under the /test command.
		gameTestServer {
			type = "gameTestServer"
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		data {
			data()

			// example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
			// gameDirectory = project.file('run-data')

			// Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
			programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
		}

		// applies to all the run configs above
		configureEach {
			// Recommended logging data for a userdev environment
			// The markers can be added/remove as needed separated by commas.
			// "SCAN": For mods scan.
			// "REGISTRIES": For firing of registry events.
			// "REGISTRYDUMP": For getting the contents of all registries.
			systemProperty 'forge.logging.markers', 'REGISTRIES'

			// Recommended logging level for the console
			// You can set various levels here.
			// Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
			logLevel = org.slf4j.event.Level.DEBUG
		}
	}

	mods {
		// define mod <-> source bindings
		// these are used to tell the game which sources are for which mod
		// mostly optional in a single mod project
		// but multi mod projects should define one per mod
		"${mod_id}" {
			sourceSet(sourceSets.main)
		}
	}
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
	runtimeClasspath.extendsFrom localRuntime
}

dependencies {

	assert essentials_dev_variant == 'false' || essentials_dev_variant == 'true'
	//Essentials
	//Can either depend on a file published to Curse or an essentials jar in a folder called "libs", in the same parent folder as "src"
	if(essentials_dev_variant == 'false'){
		//See https://www.cursemaven.com/ for explanation
		implementation "curse.maven:essentials-293752:$essentials_file_id"
	}else{
		//When setting up a dev environment for Crossroads, make sure to have an essentials jar in a folder called "libs", in the same parent folder as "src"
		implementation "com.technomancer.essentials:essentials-$essentials_version:dev"
	}

	//Compile against APIs
	//JEI
	compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
	compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
	//Curios
	compileOnly "top.theillusivec4.curios:curios-neoforge:$curios_version:api"
	//Patchouli
	compileOnly "vazkii.patchouli:Patchouli:$patchouli_version-NEOFORGE"

	//Run with the full versions
	//JEI
//	runtimeOnly "mezz.jei:jei-$minecraft_version-forge:$jei_version"
	//Curios
//	Scuffed for MC1.21, should be fine for MC1.21.1
//	runtimeOnly "top.theillusivec4.curios:curios-neoforge:$curios_version"

	// We add the full version of JEI to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
	localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

	compileOnly("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
	compileOnly("net.createmod.ponder:Ponder-NeoForge-${create_minecraft_version}:${ponder_version}")
	compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${create_minecraft_version}:${flywheel_version}")
//	runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${create_minecraft_version}:${flywheel_version}")
	compileOnly("com.tterrag.registrate:Registrate:${registrate_version}")
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.withType(ProcessResources).configureEach {
	var replaceProperties = [
			minecraft_version      : minecraft_version,
			minecraft_version_range: minecraft_version_range,
			neo_version            : neo_version,
			neo_version_range      : neo_version_range,
			loader_version_range   : loader_version_range,
			mod_id                 : mod_id,
			mod_name               : mod_name,
			mod_license            : mod_license,
			mod_version            : mod_version,
			mod_authors            : mod_authors,
			mod_credits            : mod_credits,
			mod_description        : mod_description,
			mod_issue_tracker      : mod_issue_tracker,
			essentials_version     : essentials_version
	]
	inputs.properties replaceProperties

	filesMatching(['META-INF/neoforge.mods.toml']) {
		expand replaceProperties
	}
}


// Example configuration to allow publishing using the maven-publish plugin
//publishing {
//    publications {
//        register('mavenJava', MavenPublication) {
//            from components.java
//        }
//    }
//    repositories {
//        maven {
//            url "file://${project.projectDir}/repo"
//        }
//    }
//}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}
